2011-08-01  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/include/sys/types.h: XML and RTEMS define
	_UNIX98_THREAD_MUTEX_ATTRIBUTES and can use the standard
	definitions. This avoids redefinition warnings.

2011-07-26  Ralf Corsépius <ralf.corsepius@rtems.org>

	* libc/sys/rtems/sys/dirent.h (scandir):
	Add const to "select" parameter.

2011-07-25  Ralf Corsépius  <ralf.corsepius@rtems.org>

	* libc/iconv/iconv.tex: Rename node "Introduction" into
	"Introduction to iconv".

2011-07-20  Yaakov Selkowitz  <yselkowitz@...>

	* libc/include/time.h [_POSIX_CLOCK_SELECTION] (clock_nanosleep):
	Declare.
	* libc/include/sys/features.h [__CYGWIN__] (_POSIX_CLOCK_SELECTION):
	Define.

2011-07-19  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/sys/unistd.h (_CS_XBS5_WIDTH_RESTRICTED_ENVS): Define.
	(_CS_V6_ENV): Fix definition.

2011-07-19  Ralf Corsépius <ralf.corsepius@rtems.org>

	* libc/locale/lmessages.c (_C_messages_locale):
	Move __HAVE_LOCALE_INFO_EXTENDED__ before codeset.

2011-07-19  Matt Johnson  <johnso87@crhc.illinois.edu>

	* libc/reent/sbrkr.c: Define _sbrk_r independently of the definition
	of MALLOC_PROVIDED.

2011-07-15  Yufeng Zhang  <yufeng.zhang@arm.com>

	* libc/stdio/vfwprintf.c (wcvt): Add a new parameter len of type
	int.  *length is set to the value of (rev - digits) regardless
	of whether _MB_CAPABLE is defined or not.  Replace BUF with len
	in calling _mbsnrtowcs_r and also in the loop where _MB_CAPABLE
	is not defined.
	(_VFWPRINTF_R): Call wcvt with an extra argument.  Call wcvt
	again with allocated new buffer if buf is not large enough for
	the conversion.
	* testsuite/newlib.stdio/stdio.exp: New.
	* testsuite/newlib.stdio/swprintf.c: Likewise.

2011-07-15  Matt Johnson  <johnso87@crhc.illinois.edu>

	* libc/stdio/fscanf.c (fscanf): Call _vfscanf_r instead of __svfscanf_r
	to make sure CHECK_INIT is called.
	(_fscanf_r): Ditto.
	* /libc/stdio/scanf.c (scanf): Ditto.
	(_scanf_r): Ditto.